added some content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Picstudio</title>
+  <title>coolpicsuk.com</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -53,7 +53,7 @@
             </div>
             <a class="navbar-brand" href="index.html">
               <span>
-                Picstudio
+                coolpicsuk.com
               </span>
             </a>
             <div class="user_option">
@@ -77,14 +77,30 @@
           <div class="col-lg-3 offset-lg-1">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
+                <div class="carousel-item ">
+                  <div class="detail-box">
+                    <h1>
+                      Our <br />
+                      Package: Landmark Lenses
+                    </h1>
+                    <p>
+                      Don't Just See It, Live It & Keep It! Tailored tours with a dedicated photographer in London, Scotland, Wales, Cambridge, etc.
+                    </p>
+                    <div>
+                      <a href="#">
+                        Request A Quote
+                      </a>
+                    </div>
+                  </div>
+                </div>
                 <div class="carousel-item active">
                   <div class="detail-box">
                     <h1>
-                      Pic <br />
-                      Studio
+                      Visual Stories That Resonate. <br />
+                      Photography & Videography.
                     </h1>
                     <p>
-                      It is a long established fact that a reader will be distracted by the readable content of a page
+                      Don't Just See It, Live It & Keep It! Tailored tours with a dedicated photographer in London, Scotland, Wales, Cambridge, etc.
                     </p>
                     <div>
                       <a href="#">
@@ -96,11 +112,29 @@
                 <div class="carousel-item">
                   <div class="detail-box">
                     <h1>
-                      Pic <br />
-                      Studio
+                      Our <br />
+                      Package: 
+                      Celebration & Action Coverage
                     </h1>
                     <p>
-                      It is a long established fact that a reader will be distracted by the readable content of a page
+                      Your Event, Our Masterpiece. Delivering vivid imagery and compelling video that truly reflects the spirit of your occasion.
+                    </p>
+                    <div>
+                      <a href="#">
+                        Request A Quote
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="detail-box">
+                    <h1>
+                      Our <br />
+                      Package: 
+                      Life's First Chapters
+                    </h1>
+                    <p>
+                      Your Life's Story, Beautifully Unfolding. Capturing the tender moments of new beginnings and joyous celebrations.
                     </p>
                     <div>
                       <a href="#">
@@ -122,6 +156,7 @@
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active li_one">01</li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1" class="li_two">02</li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2" class="li_three">03</li>
                   <li class="ol_design"></li>
                 </ol>
               </div>
@@ -129,7 +164,7 @@
           </div>
           <div class="col-lg-8 px-0">
             <div class="img-box">
-              <img src="images/slider-img.png" alt="" />
+              <img src="images/original/IMG_9848-EDIT.png" alt="" />
             </div>
           </div>
         </div>
